fix(file-uploader): long file names can wrap to new line (#1603)

--- a/projects/ng-aquila/src/file-uploader/item/file-uploader-name.component.scss
+++ b/projects/ng-aquila/src/file-uploader/item/file-uploader-name.component.scss
@@ -25,3 +25,6 @@
   font-size: 0.375rem;
   color: white;
 }
+.file-name {
+  word-break: break-word;
+}
